libycp/testsuite/tests/builtin/Builtin_X.ycp
( remove([1,2,3],0) == [2,3] )
( remove([1,2,3],1) == [1,3] )
( remove([1,2,3],2) == [1,2] )
( remove([1,2,3],3) == [1,2,3] )	// error
// OLD: ( remove(`HBox(1,2,3),0) == [1,2,3] )
( argsof(`HBox(1,2,3)) == [1,2,3] )
( remove(`HBox(1,2,3),1) == `HBox(2,3) )
( remove(`HBox(1,2,3),2) == `HBox(1,3) )
( remove(`HBox(1,2,3),3) == `HBox(1,2) )
( remove(`HBox(1,2,3),4) == `HBox(1,2,3) )	// error
